# qt-rotating-logo

./: .clang-format  .clang-tidy  .cmake-format.json  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
.github/workflows/: build.yml
application/: CMakeLists.txt
application/res/qml/: RotatingLogo.qml
application/src/: application.cpp  application.h  main.cpp
application/src/gui/: mainwindow.cpp  mainwindow.h
cmake/: clang_tidy_qt_workaround.cmake  windeployqt.cmake
libcommon/: CMakeLists.txt
libcommon/src/libcommon/: applicationmodel.cpp  applicationmodel.h
script/: build-linux.py  build-win.py  build.py  print-version.py
tests/: CMakeLists.txt
tests/src/: always_true.cpp  applicationmodel.cpp
